[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Mathematical brain teasers with command line interface."
authors = ["VasiliyBogdanov <moproq@icloud.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Topic :: Games/Entertainment :: Puzzle Games"
]
repository = "https://github.com/VasiliyBogdanov/python-project-lvl1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
